Calculadora/css/style.css
.botao {
    width: 50px;
    height: 50px;
    font-size: 20px;
    background-color: #FFA500;
    border-radius: 10px;
    border: none;
    outline: none;
    cursor: pointer;
    margin: 5px;
    box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.25);
    transition: all 0.2s ease;
}

.botao:hover {
    transform: translateY(4px);
    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.25);
}

.botao:active {
    transform: translateY(6px);
    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
}

body {
    background-color: #85b5f5;
    font-family: 'Roboto', sans-serif;
    color: #FFFFFF;
}

.calculadora {
    width: 265px;
    height: 400px;
    background-color: #d5d5d5;
    border-radius: 10px;
    margin: auto;
    margin-top: 200px;
    padding: 10px;
    box-shadow: 0 5px 0px rgba(0, 0, 0, 0.25);
}

.visor {
    width: 240px;
    height: 50px;
    background-color: #ffffff;
    border-radius: 10px;
    margin: 0 auto;
    margin-bottom: 20px;
    padding: 0 0 0 20px;
    box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.25);
    font-size: 30px;
    text-align: right;
}

div#calculadora>div#visor>p#resultado {
    padding: 10px;
    color: #000000;
}

#botaoIgual {
    width: 115px;
}

footer {
    width: 99%;
    position: absolute;
    bottom: 0;
}

footer a {
    color: #fff;
    text-decoration: none;
    font-weight: bolder;
}

footer a:hover {
    color: #000;
}

footer p {
    text-align: center;
    color: #fff;
    font-weight: bold;
}

